--- a/card-practise.html
+++ b/card-practise.html
@@ -1,33 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<head> 
+    <title>bootstrap2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
      rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
      crossorigin="anonymous">
 </head>
 <body>
-    <div class="card w-25 ms-5 mt-5">
-        <img src="doll.jpg" class="card-img-top rounded-circle" alt="dol">
-       <div class="card-body"> 
-         <h5 class="card-title">My Doll</h5>
-         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-            Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>  
-            <div class="mb-2">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-              </ul>
-           </div> 
-        <div class="card-body">
-            <a href="#" class="btn btn-warning">Damon</a>
-            <a href="#" class="btn btn-info">Stefen</a>
-        </div> 
+<div class="container-fluid ">
+    <div class="row gx-5">
+        <div class="card col-sm-5">
+            <img src="doll.jpg" class="card-img-top rounded-circle" alt="dol">
+            <h5 class="card-header text-uppercase">Card header</h5>
+           <div class="card-body"> 
+             <h5 class="card-title">My Doll</h5>
+             <h6 class="card-subtitle text-muted">Preety kitty doll</h6>
+             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+                </p>
+            </div>  
+                <div class="mb-2">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item fst-italic">An item</li>
+                    <li class="list-group-item font-monospace">A second item</li>
+                    <li class="list-group-item invisible">A third item</li>
+                  </ul>
+               </div> 
+            <div class="card-body">
+                <a href="#" class="btn btn-warning">Damon</a>
+                <a href="#" class="btn btn-info">Stefen</a>
+            </div> 
+            <h5 class="card-footer fw-bolder bg-warning">Footer</h5>
+        </div>
+    
+        <div class="card col-sm-5 ">
+            <img src="doll.jpg" class="card-img-top rounded-circle" alt="dol">
+            <h5 class="card-header mt-5">header</h5>
+           <div class="card-body"> 
+             <h5 class="card-title">My Doll</h5>
+             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+                </p>
+            </div>  
+                <div class="mb-2">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                  </ul>
+               </div> 
+            <div class="card-body">
+                <a href="#" class="card-link">Damon</a>
+                <a href="#" class="card-link">Stefen</a>
+            </div> 
+            <h5 class="card-footer fw-bolder">Footer</h5>
+        </div>
     </div>
+</div>
+
+<!--hr-->
+<div>
+    <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+<div class="card w-50 text-white bg-dark">
+    <img src="img2.jpg" class="card-img" alt="img">
+    <div class="card-img-overlay"> <!--to give text on img-->
+      <h5 class="card-title ">Card title</h5>
+      <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+ 
+    </div>
+     </div>
+    <div class="card w-50">
+        <div class="row gx-5">
+            <div class="col-md-4">
+         <img src="doll.jpg" alt="dol" class="img-fluid rounded-start">
+            </div>
+        
+        <div class="col-md-8">
+            <divsss class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </divsss>
+          </div>
+        </div>
+    </div>
+
+ 
 </body>
 </html>
