--- a/boot-color.html
+++ b/boot-color.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <title>Table</title>
+    <title>color</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     rel="stylesheet"
      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
      crossorigin="anonymous">
 </head>
-<body class="text-center mt-5">  
-    <span class="text-white bg-primary">Head</span><br>
-    <span class="text-white bg-secondar">Head</span><br>
-    <span class="text-white bg-dark">Head</span><br>
-    <span class="text-white bg-danger">Head</span><br>
-    <span class="text-white bg-light">Head</span> <br>
-    <span class="text-white bg-warning">Head</span><br>
-    <span class="text-white bg-info">Head</span><br>
-    <span class="text-white bg-success">Head</span><br> 
+<body class="text-center mt-5">
+    <div class="py-2 px-2">
+        <span class="text-white bg-primary">Head</span><br>
+        <span class="text-white bg-secondary">Head</span><br>
+        <span class="text-white bg-dark">Head</span><br>
+        <span class="text-white bg-danger">Head</span><br>
+        <span class="text-white bg-light">Head</span> <br>
+        <span class="text-white bg-warning">Head</span><br>
+        <span class="text-white bg-info">Head</span><br>
+        <span class="text-white bg-success">Head</span><br> 
+    </div>    
 </body>
 </html>
