rounded-pic-stark

--- a/card-properties.html
+++ b/card-properties.html
@@ -14,7 +14,7 @@
          <div class="card-header text-center">
             Iron-man  
          </div>
-         <img src="tony.jpg" alt="stark" class="card-img-top p-2 ">   
+         <img src="tony.jpg" alt="stark" class="card-img-top p-2 rounded-3">   
        <div class="card-body">
         <h4 class="card-title text-center">
             Tonny-Stark 
